--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/drizzle-adapter": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.2",
     "lucide-react": "^0.424.0",
